# introspection_tests

./: .gitignore  README.md  pyproject.toml  requirements.txt
results/qwen_honesty/: metrics_20251229_182124.json  results_20251229_182124.json
results/qwen_honesty_sweep/: sweep_20251229_182712.json
scripts/: coefficient_sweep.py  introspection_test.py
src/introspection_tests/: __init__.py  detection.py  injection.py  metrics.py  queries.py
