[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "introspection-tests"
version = "0.1.0"
description = "Testing for emergent introspective awareness in LLMs using control vector injection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "repeng",
    "accelerate",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7.0"]

[tool.setuptools.packages.find]
where = ["src"]
